# internal-chat

./: .env.example  .gitignore  DEPLOY.md  DEVELOPMENT.md  DOCKER.md  OFFLINE-DEPLOY.md  README.md  chat.sh  deploy.sh  docker-compose.yml  pack.sh  prd-internal-chat.md
desktop/: .env.example  .npmrc  README.md  REFACTORING.md  index.html  package-lock.json  package.json  tsconfig.main.json  vite.config.ts
desktop/electron/: main.ts  preload.ts
desktop/src/: App.tsx  config.ts  index.css  main.tsx
desktop/src/components/: index.ts
desktop/src/services/: api.auth.ts  api.base.ts  api.file.ts  api.friend.ts  api.group.ts  api.message.ts  api.ts  api.user.ts  socket.ts
desktop/src/stores/: chatStore.ts  index.ts
qt-client/: CMakeLists.txt  README.md
qt-client/resources/: resources.qrc
qt-client/resources/styles/: style.qss
qt-client/src/: chatwidget.cpp  chatwidget.h  contactwidget.cpp  contactwidget.h  loginwidget.cpp  loginwidget.h  main.cpp  mainwindow.cpp  mainwindow.h
qt-client/src/api/: apiclient.cpp  apiclient.h
qt-client/src/models/: models.cpp  models.h
server/: .dockerignore  .env.example  .env.production.example  Dockerfile  docker-compose.yml  docker-entrypoint.sh  init-db.sql  package-lock.json  package.json  tsconfig.json
server/docs/: DATABASE_MIGRATION.md
server/prisma/: schema.prisma  seed.ts
server/scripts/: init-admin.ts  migrate-sqlite-to-pg.sh  setup-postgres.sh
server/src/: app.ts
web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  config.ts  main.tsx
(+61 files in other folders)
